--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
     -->
     <header class="header">
         <a href="/" class="header__logo link">
-          <img src="./wolf.png" alt="Логотип" width="64" height="64" />
+          <img src="./images/wolf.png" alt="Логотип" width="64" height="64" />
           <h1 class="header__title">BlissMusic</h1>
         </a>
         <input type="search" class="header__search" placeholder="Поиск трека..." />
@@ -64,7 +64,7 @@
       <div class="cards">
         <div class="card">
           <a href="#">
-            <img src="./may_waves.jpg" class="card-image" alt="avatar">
+            <img src="./images/may_waves.jpg" class="card-image" alt="avatar">
           </a>
           <div class="card-body">
             <div class="card-title">
@@ -77,7 +77,7 @@
         </div>
         <div class="card">
           <a href="#">
-            <img src="./camry.jpg" class="card-image" alt="avatar">
+            <img src="./images/camry.jpg" class="card-image" alt="avatar">
           </a>
           <div class="card-body">
             <div class="card-title">
@@ -90,7 +90,7 @@
         </div>
         <div class="card">
           <a href="#">
-            <img src="./rauf_and_faik.jpg" class="card-image" alt="avatar">
+            <img src="./images/rauf_and_faik.jpg" class="card-image" alt="avatar">
           </a>
           <div class="card-body">
             <div class="card-title">
@@ -103,7 +103,7 @@
         </div>
         <div class="card">
           <a href="#">
-            <img src="./white_box.jpg" class="card-image" alt="avatar">
+            <img src="./images/white_box.jpg" class="card-image" alt="avatar">
           </a>
           <div class="card-body">
             <div class="card-title">
@@ -116,7 +116,7 @@
         </div>
         <div class="card">
           <a href="#">
-            <img src="./white_box.jpg" class="card-image" alt="avatar">
+            <img src="./images/white_box.jpg" class="card-image" alt="avatar">
           </a>
           <div class="card-body">
             <div class="card-title">
@@ -129,7 +129,7 @@
         </div>
         <div class="card">
           <a href="#">
-            <img src="./white_box.jpg" class="card-image" alt="avatar">
+            <img src="./images/white_box.jpg" class="card-image" alt="avatar">
           </a>
           <div class="card-body">
             <div class="card-title">
@@ -145,7 +145,7 @@
       <div class="cards">
         <div class="card">
           <a href="#">
-            <img src="./001.jpg" class="card-image" alt="avatar">
+            <img src="./images/001.jpg" class="card-image" alt="avatar">
           </a>
           <div class="card-body">
             <div class="card-title">
@@ -158,7 +158,7 @@
         </div>
         <div class="card">
           <a href="#">
-            <img src="./faith.jpg" class="card-image" alt="avatar">
+            <img src="./images/faith.jpg" class="card-image" alt="avatar">
           </a>
           <div class="card-body">
             <div class="card-title">
@@ -171,7 +171,7 @@
         </div>
         <div class="card">
           <a href="#">
-            <img src="./keske.jpg" class="card-image" alt="avatar">
+            <img src="./images/keske.jpg" class="card-image" alt="avatar">
           </a>
           <div class="card-body">
             <div class="card-title">
@@ -184,7 +184,7 @@
         </div>
         <div class="card">
           <a href="#">
-            <img src="./white_box.jpg" class="card-image" alt="avatar">
+            <img src="./images/white_box.jpg" class="card-image" alt="avatar">
           </a>
           <div class="card-body">
             <div class="card-title">
@@ -197,7 +197,7 @@
         </div>
         <div class="card">
           <a href="#">
-            <img src="./white_box.jpg" class="card-image" alt="avatar">
+            <img src="./images/white_box.jpg" class="card-image" alt="avatar">
           </a>
           <div class="card-body">
             <div class="card-title">
@@ -210,7 +210,7 @@
         </div>
         <div class="card">
           <a href="#">
-            <img src="./white_box.jpg" class="card-image" alt="avatar">
+            <img src="./images/white_box.jpg" class="card-image" alt="avatar">
           </a>
           <div class="card-body">
             <div class="card-title">
@@ -227,7 +227,7 @@
       <p>© 2022 shakhnazaryan vachik</p>
       <p>*Здесь должен быть плеер</p>
       <nav class="footer__navigation">
-        <a class="link" href="./">Pricing</a>
+        <a class="link" href="./images/">Pricing</a>
         <a 
         class="link" 
         href="https://vk.com/vachikshakhnazaryan"
