--- a/public/index.html
+++ b/public/index.html
@@ -68,10 +68,10 @@
           </a>
           <div class="card-body">
             <div class="card-title">
-              <a href="#">Dead Love</a>
+              <a class="card-music-title" href="#">Dead Love</a>
             </div>
             <div class="card-artist">
-              <a href="#">May Waves</a>
+              <a class="artist" href="#">May Waves</a>
             </div>
           </div>
         </div>
@@ -81,10 +81,10 @@
           </a>
           <div class="card-body">
             <div class="card-title">
-              <a href="#">Camry 3.5</a>
+              <a class="card-music-title" href="#">Camry 3.5</a>
             </div>
             <div class="card-artist">
-              <a href="#">UncleFlexxx</a>
+              <a class="artist" href="#">UncleFlexxx</a>
             </div>
           </div>
         </div>
@@ -94,10 +94,10 @@
           </a>
           <div class="card-body">
             <div class="card-title">
-              <a href="#">I love you</a>
+              <a class="card-music-title" href="#">I love you</a>
             </div>
             <div class="card-artist">
-              <a href="#">Rauf & Faik</a>
+              <a class="artist" href="#">Rauf & Faik</a>
             </div>
           </div>
         </div>
@@ -107,10 +107,10 @@
           </a>
           <div class="card-body">
             <div class="card-title">
-              <a href="#">White box</a>
+              <a class="card-music-title" href="#">White box</a>
             </div>
             <div class="card-artist">
-              <a href="#">Nothing</a>
+              <a class="artist" href="#">Nothing</a>
             </div>
           </div>
         </div>
@@ -120,10 +120,10 @@
           </a>
           <div class="card-body">
             <div class="card-title">
-              <a href="#">White box</a>
+              <a class="card-music-title" href="#">White box</a>
             </div>
             <div class="card-artist">
-              <a href="#">Nothing</a>
+              <a class="artist" href="#">Nothing</a>
             </div>
           </div>
         </div>
@@ -133,10 +133,10 @@
           </a>
           <div class="card-body">
             <div class="card-title">
-              <a href="#">White box</a>
+              <a class="card-music-title" href="#">White box</a>
             </div>
             <div class="card-artist">
-              <a href="#">Nothing</a>
+              <a class="artist" href="#">Nothing</a>
             </div>
           </div>
         </div>
@@ -149,10 +149,10 @@
           </a>
           <div class="card-body">
             <div class="card-title">
-              <a href="#">001</a>
+              <a class="card-music-title" href="#">001</a>
             </div>
             <div class="card-artist">
-              <a href="#">FREE FLOW FLAVA</a>
+              <a class="artist" href="#">FREE FLOW FLAVA</a>
             </div>
           </div>
         </div>
@@ -162,10 +162,10 @@
           </a>
           <div class="card-body">
             <div class="card-title">
-              <a href="#">Faith</a>
+              <a class="card-music-title" href="#">Faith</a>
             </div>
             <div class="card-artist">
-              <a href="#">FREE FLOW FLAVA</a>
+              <a class="artist" href="#">FREE FLOW FLAVA</a>
             </div>
           </div>
         </div>
@@ -175,10 +175,10 @@
           </a>
           <div class="card-body">
             <div class="card-title">
-              <a href="#">Eurobeat</a>
+              <a class="card-music-title" href="#">Eurobeat</a>
             </div>
             <div class="card-artist">
-              <a href="#">Initial D</a>
+              <a class="artist" href="#">Initial D</a>
             </div>
           </div>
         </div>
@@ -188,10 +188,10 @@
           </a>
           <div class="card-body">
             <div class="card-title">
-              <a href="#">White box</a>
+              <a class="card-music-title" href="#">White box</a>
             </div>
             <div class="card-artist">
-              <a href="#">Nothing</a>
+              <a class="artist" href="#">Nothing</a>
             </div>
           </div>
         </div>
@@ -201,10 +201,10 @@
           </a>
           <div class="card-body">
             <div class="card-title">
-              <a href="#">White box</a>
+              <a class="card-music-title" href="#">White box</a>
             </div>
             <div class="card-artist">
-              <a href="#">Nothing</a>
+              <a class="artist" href="#">Nothing</a>
             </div>
           </div>
         </div>
@@ -214,10 +214,10 @@
           </a>
           <div class="card-body">
             <div class="card-title">
-              <a href="#">White box</a>
+              <a class="card-music-title" href="#">White box</a>
             </div>
             <div class="card-artist">
-              <a href="#">Nothing</a>
+              <a class="artist" href="#">Nothing</a>
             </div>
           </div>
         </div>
@@ -225,7 +225,7 @@
     </main>
     <footer class="footer">
       <p>© 2022 shakhnazaryan vachik</p>
-      <p>*Здесь должен быть плеер</p>
+      <audio class="audio" id="audio" src="./audio/omae-wa-mou-shindeiru.mp3" controls></audio>
       <nav class="footer__navigation">
         <a class="link" href="./images/">Pricing</a>
         <a 
