--- a/public/index.html
+++ b/public/index.html
@@ -225,7 +225,7 @@
     </main>
     <footer class="footer">
       <p>© 2022 shakhnazaryan vachik</p>
-      <audio class="audio" id="audio" src="./audio/omae-wa-mou-shindeiru.mp3" controls></audio>
+      <audio class="audio" id="audio" src="./audio/andro_-_kak_ne_lyubit__muzati.net.mp3" controls></audio>
       <nav class="footer__navigation">
         <a class="link" href="./images/">Pricing</a>
         <a 
