--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       content="Web site created using create-react-app"
     />
     <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
+      Notice the use of %PUBLIC_URL% in the main_nav above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
 
@@ -28,8 +28,8 @@
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+      You can add webfonts, meta main_nav, or analytics to this file.
+      The build step will place the bundled scripts into the <body> option.
 
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
@@ -46,17 +46,17 @@
         </nav>
       </header>
     <aside class="side_panel">
-      <ul class="tags">
-        <li class="tag" tabindex="0">Home</li>
-        <li class="tag" tabindex="0">My library</li>
-        <li class="tag" tabindex="0">Create playlist</li>
+      <ul class="main_nav">
+        <li class="option" tabindex="0">Home</li>
+        <li class="option" tabindex="0">My library</li>
+        <li class="option" tabindex="0">Create playlist</li>
       </ul>
-      <ul class="other-tags">
-        <li class="other-tag" tabindex="0">In trend</li>
-        <li class="other-tag" tabindex="0">Top Gaming Tracks</li>
-        <li class="other-tag" tabindex="0">Top Russian Tracks</li>
-        <li class="other-tag" tabindex="0">World Top 100</li>
-        <li class="other-tag" tabindex="0"></li>
+      <ul class="additional_nav">
+        <li class="other-option" tabindex="0">In trend</li>
+        <li class="other-option" tabindex="0">Top Gaming Tracks</li>
+        <li class="other-option" tabindex="0">Top Russian Tracks</li>
+        <li class="other-option" tabindex="0">World Top 100</li>
+        <li class="other-option" tabindex="0"></li>
       </ul>
     </aside>
     <main class="content">
