--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="/favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
@@ -13,17 +13,17 @@
       content="Web site created using create-react-app"
     />
     <!--
-      Notice the use of %PUBLIC_URL% in the main_nav above.
+      Notice the use of  in the main_nav above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
+      Unlike "/favicon.ico" or "favicon.ico", "/favicon.ico" will
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>BlissMusic</title>
     <link rel="stylesheet" href="/template/src/index.css" />
-  </head>
+  <script defer src="/static/js/bundle.js"></script></head>
   <body class="app">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
@@ -52,7 +52,7 @@
       <ul class="main_nav">
         <li class="option" tabindex="0">Home</li>
         <li class="option" tabindex="0">My library</li>
-        <li class="option" tabindex="0">Create playlist</li>
+        <li class="option" tabindex="0">Playlists</li>
       </ul>
       <ul class="additional_nav">
         <li class="other-option" tabindex="0">In trend</li>
@@ -63,6 +63,34 @@
       </ul>
     </aside>
     <main class="content">
+      <div class="container">        
+        <form class="search_form" action="">
+            <input type="hidden" id='hidden_token'>
+            <div class="genre_option">
+                <label for="Genre" class="option_title">Genre:</label>
+                <select name="" id="select_genre" class="select_option">
+                    <option>Select...</option>                    
+                </select>
+            </div>
+            <div class="playlists_option">
+                <label for="Genre" class="option_title">Playlists:</label>
+                <select name="" id="select_playlist" class="select_option">
+                    <option>Select...</option>                    
+                </select>
+            </div>                  
+            <div class="button_search">
+                <button type="submit" id="btn_submit" class="btn_search">Search</button>
+            </div>          
+        </form>        
+        <div class="row">
+            <div class="list_group">
+                <div class="list-group song-list">
+                </div>                                             
+            </div>
+            <div class="track_details" id="song-detail">                
+            </div>
+        </div>   
+      </div>
       <h2 class="category">Music for you</h2>
       <div class="cards">
         <div class="card">
@@ -239,5 +267,6 @@
         >Vk</a> 
       </nav>
     </footer>
+    <script src="./app.js"></script>
   </body>
 </html>
