--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
     -->
     <title>BlissMusic</title>
     <link rel="stylesheet" href="/template/src/index.css" />
-    <script src="./api.js" defer></script>
+    <script type="module" src="./api.js" defer></script>
   </head>
   <body class="app">
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -91,7 +91,7 @@
             <div class="track_details" id="song-detail">                
             </div>
         </div>   
-      </div>
+      </div> 
       <h2 class="category">Music for you</h2>
       <div class="cards">
         <div class="card">
