--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="/favicon.ico" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -10,16 +13,17 @@
       content="Web site created using create-react-app"
     />
     <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
+      Notice the use of  in the main_nav above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
+      Unlike "/favicon.ico" or "favicon.ico", "/favicon.ico" will
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>BlissMusic</title>
     <link rel="stylesheet" href="/template/src/index.css" />
+    <script type="module" src="./api.js" defer></script>
   </head>
   <body class="app">
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -28,213 +32,11 @@
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+      You can add webfonts, meta main_nav, or analytics to this file.
+      The build step will place the bundled scripts into the <body> option.
 
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <header class="header">
-        <a href="/" class="header__logo link">
-          <img src="./images/wolf.png" alt="Логотип" width="64" height="64" />
-          <h1 class="header__title">BlissMusic</h1>
-        </a>
-        <input type="search" class="header__search" placeholder="Поиск трека..." />
-        <nav class="header__navigation">
-          <a href="/" class="link">Subscription</a>
-          <a href="/" class="link">Profile</a>
-        </nav>
-      </header>
-    <aside class="side_panel">
-      <ul class="tags">
-        <li class="tag" tabindex="0">Home</li>
-        <li class="tag" tabindex="0">My library</li>
-        <li class="tag" tabindex="0">Create playlist</li>
-      </ul>
-      <ul class="other-tags">
-        <li class="other-tag" tabindex="0">In trend</li>
-        <li class="other-tag" tabindex="0">Top Gaming Tracks</li>
-        <li class="other-tag" tabindex="0">Top Russian Tracks</li>
-        <li class="other-tag" tabindex="0">World Top 100</li>
-        <li class="other-tag" tabindex="0"></li>
-      </ul>
-    </aside>
-    <main class="content">
-      <h2 class="category">Music for you</h2>
-      <div class="cards">
-        <div class="card">
-          <a href="#">
-            <img src="./images/may_waves.jpg" class="card-image" alt="avatar">
-          </a>
-          <div class="card-body">
-            <div class="card-title">
-              <a href="#">Dead Love</a>
-            </div>
-            <div class="card-artist">
-              <a href="#">May Waves</a>
-            </div>
-          </div>
-        </div>
-        <div class="card">
-          <a href="#">
-            <img src="./images/camry.jpg" class="card-image" alt="avatar">
-          </a>
-          <div class="card-body">
-            <div class="card-title">
-              <a href="#">Camry 3.5</a>
-            </div>
-            <div class="card-artist">
-              <a href="#">UncleFlexxx</a>
-            </div>
-          </div>
-        </div>
-        <div class="card">
-          <a href="#">
-            <img src="./images/rauf_and_faik.jpg" class="card-image" alt="avatar">
-          </a>
-          <div class="card-body">
-            <div class="card-title">
-              <a href="#">I love you</a>
-            </div>
-            <div class="card-artist">
-              <a href="#">Rauf & Faik</a>
-            </div>
-          </div>
-        </div>
-        <div class="card">
-          <a href="#">
-            <img src="./images/white_box.jpg" class="card-image" alt="avatar">
-          </a>
-          <div class="card-body">
-            <div class="card-title">
-              <a href="#">White box</a>
-            </div>
-            <div class="card-artist">
-              <a href="#">Nothing</a>
-            </div>
-          </div>
-        </div>
-        <div class="card">
-          <a href="#">
-            <img src="./images/white_box.jpg" class="card-image" alt="avatar">
-          </a>
-          <div class="card-body">
-            <div class="card-title">
-              <a href="#">White box</a>
-            </div>
-            <div class="card-artist">
-              <a href="#">Nothing</a>
-            </div>
-          </div>
-        </div>
-        <div class="card">
-          <a href="#">
-            <img src="./images/white_box.jpg" class="card-image" alt="avatar">
-          </a>
-          <div class="card-body">
-            <div class="card-title">
-              <a href="#">White box</a>
-            </div>
-            <div class="card-artist">
-              <a href="#">Nothing</a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <h2 class="category">Car Music</h2>
-      <div class="cards">
-        <div class="card">
-          <a href="#">
-            <img src="./images/001.jpg" class="card-image" alt="avatar">
-          </a>
-          <div class="card-body">
-            <div class="card-title">
-              <a href="#">001</a>
-            </div>
-            <div class="card-artist">
-              <a href="#">FREE FLOW FLAVA</a>
-            </div>
-          </div>
-        </div>
-        <div class="card">
-          <a href="#">
-            <img src="./images/faith.jpg" class="card-image" alt="avatar">
-          </a>
-          <div class="card-body">
-            <div class="card-title">
-              <a href="#">Faith</a>
-            </div>
-            <div class="card-artist">
-              <a href="#">FREE FLOW FLAVA</a>
-            </div>
-          </div>
-        </div>
-        <div class="card">
-          <a href="#">
-            <img src="./images/keske.jpg" class="card-image" alt="avatar">
-          </a>
-          <div class="card-body">
-            <div class="card-title">
-              <a href="#">Eurobeat</a>
-            </div>
-            <div class="card-artist">
-              <a href="#">Initial D</a>
-            </div>
-          </div>
-        </div>
-        <div class="card">
-          <a href="#">
-            <img src="./images/white_box.jpg" class="card-image" alt="avatar">
-          </a>
-          <div class="card-body">
-            <div class="card-title">
-              <a href="#">White box</a>
-            </div>
-            <div class="card-artist">
-              <a href="#">Nothing</a>
-            </div>
-          </div>
-        </div>
-        <div class="card">
-          <a href="#">
-            <img src="./images/white_box.jpg" class="card-image" alt="avatar">
-          </a>
-          <div class="card-body">
-            <div class="card-title">
-              <a href="#">White box</a>
-            </div>
-            <div class="card-artist">
-              <a href="#">Nothing</a>
-            </div>
-          </div>
-        </div>
-        <div class="card">
-          <a href="#">
-            <img src="./images/white_box.jpg" class="card-image" alt="avatar">
-          </a>
-          <div class="card-body">
-            <div class="card-title">
-              <a href="#">White box</a>
-            </div>
-            <div class="card-artist">
-              <a href="#">Nothing</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </main>
-    <footer class="footer">
-      <p>© 2022 shakhnazaryan vachik</p>
-      <p>*Здесь должен быть плеер</p>
-      <nav class="footer__navigation">
-        <a class="link" href="./images/">Pricing</a>
-        <a 
-        class="link" 
-        href="https://vk.com/vachikshakhnazaryan"
-        target="_blank"
-        rel="noopener"
-        >Vk</a> 
-      </nav>
-    </footer>
   </body>
 </html>
